--- a/gatitos.html
+++ b/gatitos.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>GATITOS FEOS COMO GABY</title>
+
 </head>
+<link rel="stylesheet" type="text/css" href="styles.css">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 <body>
 	<h1>Gatitos feos como gaby</h1>
 	<h2>gatitos feos como tina</h2>
