--- a/gatitos.html
+++ b/gatitos.html
@@ -9,6 +9,25 @@
 </head>
 <link rel="stylesheet" type="text/css" href="styles.css">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+
+<form action="/my-handling-form-page" method="post">
+ <ul>
+  <li>
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="user_name">
+  </li>
+  <li>
+    <label for="mail">E-mail:</label>
+    <input type="email" id="mail" name="user_email">
+  </li>
+  <li>
+    <label for="msg">Message:</label>
+    <textarea id="msg" name="user_message"></textarea>
+  <button type="submit">Send your message</button>
+</li>
+ </ul>
+</form>
+
 <body>
 	<h1>Gatitos feos como gaby</h1>
 	<h2>gatitos feos como tina</h2>
